[tool.poetry]
name = "bungaa-tg-resender"
version = "0.1.0"
description = ""
authors = ["BungaaFACE <vladislav0218@gmail.com>"]
readme = "README.md"
packages = [{include = "bungaa_tg_resender"}]

[tool.poetry.dependencies]
python = "^3.10"
pyopenssl = "^23.2.0"
telethon = "^1.30.0"
aiogram = "^3.0.0"
transliterate = "^1.10.2"
emoji = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
